# Giants-Mod-Editor

./: .clangd  .eslintrc.cjs  .gitignore  CMakeLists.txt  README.md  build.bat  configure.bat  imgui.ini  modDesc.xml  package-lock.json  package.json  pnpm-lock.yaml  run  run.bat  vite.config.ts  vue.config.js
.cache/clangd/index/: App.cpp.2B9FF106B8C61142.idx  App.cpp.665C1BF7ED07A593.idx  App.hpp.398780C9F0D604AC.idx  App.hpp.69E04C956C8C5FD5.idx  json.hpp.5237A581C3D92CEA.idx  json.hpp.6129C120F649480B.idx  list_ports_win.cc.684F9B7665592253.idx  list_ports_win.cc.797410A2467F15C4.idx  main.cpp.EDD0F24E456989EB.idx  serial.cc.1FB6F42F38C393A7.idx  serial.cc.F68EF5125569B575.idx  serial.h.0A26B676C7977450.idx  serial.h.D8CBDC9BA8243144.idx  v8stdint.h.0C2DF43B6833E488.idx  v8stdint.h.31F10EE909637B15.idx  win.cc.421D7C6AEF2A0827.idx  win.cc.B4E7F463EF811D51.idx  win.h.6C608483A0C8DC39.idx  win.h.7CB24A4C6CA975A7.idx
src/: App.cpp  App.hpp  App.vue  ModEditor.vue  index.css  json.hpp  store.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: SectionHeader.vue  SimpleAttribute.vue  SimpleProperty.vue  SoundModifiers.vue  SubSectionHeader.vue  TextInputXMLTag.vue  TranslatedProperty.vue
src/components/Basic/: BasicButton.vue  BasicCheckbox.vue  BasicDropdown.vue  BasicIcon.vue  BasicTabSwitcher.vue  BasicText.vue  BasicTextInput.vue
src/ui/: main.lua
